LocalConnection now uses a single isolate per function.